--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,9 @@
     <string name="login_label">Log in to Twitter</string>
     <string name="intent_scheme">oauth</string>
     <string name="intent_host">cprest</string>
+    <string name="compose">Compose</string>
+    <string name="what_s_happening">What\'s happening?</string>
+    <string name="tweet">Tweet</string>
+    <string name="empty_tweet">Characters left: 280/280</string>
 
 </resources>
